[gd_scene load_steps=4 format=3 uid="uid://c1ars88uriab5"]

[ext_resource type="Script" path="res://Scripts/OOP/Foraging/pattern_minigame.gd" id="1_p4t3n"]
[ext_resource type="Theme" uid="uid://bcfxu54llfagk" path="res://Resources/foraging_theme.tres" id="2_k8p4n"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.1, 0.1, 0.1, 0.9)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12

[node name="PatternMinigame" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_k8p4n")
script = ExtResource("1_p4t3n")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="Background/VBoxContainer"]
layout_mode = 2
text = "Remember the Pattern"
horizontal_alignment = 1

[node name="PatternContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="InputContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="TimerBar" type="ProgressBar" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -30.0
offset_right = -20.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
value = 100.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
